ready for release

--- a/docs/source/Libraries Demo.ipynb
+++ b/docs/source/Libraries Demo.ipynb
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 134,
    "metadata": {
     "collapsed": true
    },
@@ -1206,7 +1206,8 @@
     "%matplotlib inline\n",
     "from autodiff.backprop import *\n",
     "from autodiff.forward import *\n",
-    "from autodiff.rootfinding import *"
+    "from autodiff.rootfinding import *\n",
+    "import time"
    ]
   },
   {
@@ -1217,16 +1218,18 @@
     "It calculate the derivative of each nodes in the compuational graph with respect to the root nodes. Therefore with different root nodes, we should expect to see different values of derivative.\n",
     "suppose we have the following structure:\n",
     "\n",
-    " - $x = 1$, $y = 2$\n",
-    " - $c = \\sin(x)$\n",
-    " - $d = c \\cdot y$\n",
+    "$x = 1$, $y = 2$\n",
+    "\n",
+    "$c = \\sin(x)$\n",
+    "\n",
+    "$d = c \\cdot y$\n",
     "\n",
     "Note: after one round of back propagation, the .bder attributes stores the answer from the last round until it is cleared when a new round is called upon."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1273,32 +1276,134 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Back propagation is also integrated with the function Newton's"
+    "Our Backward Mode is faster than Forward Mode when getting the derivatives of all nodes in a certain computational graph because of caching the results in the process. \n",
+    "\n",
+    "User can use our backward mode to make their own neural network"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 136,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "derivative of x with respect to f is  -0.254837416116\n",
+      "derivative of y with respect to f is  -0.867211207612\n",
+      "derivative of c with respect to f is  0\n",
+      "derivative of d with respect to f is  0\n",
+      "derivative of e with respect to f is  1.1333910384\n",
+      "derivative of f with respect to f is  1\n",
+      "derivative of g with respect to f is  0\n",
+      "time taken is 0.43090200424194336 second\n"
+     ]
+    }
+   ],
+   "source": [
+    "start1 = time.time()\n",
+    "x = Variable()\n",
+    "y = Variable()\n",
+    "c = sin(x)\n",
+    "d = cos(y)\n",
+    "e = sin(x)*cos(y)\n",
+    "f = tan(e)\n",
+    "for i in range(10000):\n",
+    "    back_propagation(f,{x:1,y:2})\n",
+    "end1 = time.time()\n",
+    "interval = end1-start1\n",
+    "print('derivative of x with respect to f is ', x.bder)\n",
+    "print('derivative of y with respect to f is ', y.bder)\n",
+    "print('derivative of c with respect to f is ', c.bder)\n",
+    "print('derivative of d with respect to f is ', d.bder)\n",
+    "print('derivative of e with respect to f is ', e.bder)\n",
+    "print('derivative of f with respect to f is ', f.bder)\n",
+    "print('derivative of g with respect to f is ', g.bder)\n",
+    "print('time taken is {} second'.format(interval))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "derivative of x with respect to f is  -0.254837416116\n",
+      "derivative of y with respect to f is  -0.867211207612\n",
+      "derivative of c with respect to f is  -0.0\n",
+      "derivative of d with respect to f is  -0.0\n",
+      "derivative of e with respect to f is  1.1333910384\n",
+      "derivative of f with respect to f is  1.0\n",
+      "derivative of g with respect to f is  -0.0\n",
+      "0.8440079689025879\n"
+     ]
+    }
+   ],
+   "source": [
+    "start2 = time.time()\n",
+    "for i in range(10000):\n",
+    "    forward_x = f.derivative_at(x,{x:1,y:2})\n",
+    "    forward_y = f.derivative_at(y,{x:1,y:2})\n",
+    "    forward_c = f.derivative_at(c,{x:1,y:2})\n",
+    "    forward_d = f.derivative_at(d,{x:1,y:2})\n",
+    "    forward_e = f.derivative_at(e,{x:1,y:2})\n",
+    "    forward_f = f.derivative_at(f,{x:1,y:2})\n",
+    "    forward_g = f.derivative_at(g,{x:1,y:2})\n",
+    "end2 = time.time()\n",
+    "interval = end2-start2\n",
+    "print('derivative of x with respect to f is ', forward_x)\n",
+    "print('derivative of y with respect to f is ', forward_y)\n",
+    "print('derivative of c with respect to f is ', forward_c)\n",
+    "print('derivative of d with respect to f is ', forward_d)\n",
+    "print('derivative of e with respect to f is ', forward_e)\n",
+    "print('derivative of f with respect to f is ', forward_f)\n",
+    "print('derivative of g with respect to f is ', forward_g)\n",
+    "print(interval)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Back propagation is also integrated with the function Newton's**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that sine function have multiple roots, and newton's method will only give you the first one it finds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "result_d=newton_scalar(d,{x:1,y:1},max_itr = 25,method = 'backward')"
+    "result_d=newton_scalar(d,{x:1,y:-1},max_itr = 25,method = 'backward')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 143,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x: -0.557407724655\n",
-      "y: 0.0\n",
-      "function value: 0.0\n"
+      "x: 2.84112466652\n",
+      "y: -1.5707963268\n",
+      "function value: 5.91243550575e-13\n"
      ]
     }
    ],
